kube/02-shorten-url-demo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shorten-url-demo
  namespace: shorten-url-demo
  labels:
    app: shorten-url-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shorten-url-demo
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: shorten-url-demo
    spec:
      containers:
        - name: shorten-url-demo
          image: ghcr.io/hokamc/shorten-url-demo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: https
              containerPort: 8443
          livenessProbe:
            httpGet:
              path: /health-check
              scheme: HTTPS
              port: 8443
            initialDelaySeconds: 15
            timeoutSeconds: 15
          readinessProbe:
            httpGet:
              path: /health-check
              scheme: HTTPS
              port: 8443
            initialDelaySeconds: 5
            timeoutSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: shorten-url-demo
  namespace: shorten-url-demo
spec:
  ports:
    - port: 443
      targetPort: 8443
      protocol: TCP
      name: shorten-url-demo
  selector:
    app: shorten-url-demo
---
